# CPP-project-template

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.MD
.github/workflows/: generate_docs.yml  multiplatform_compile.yml
cmake/: ClangFormat.cmake  Doxygen.cmake  OpenSSFHardening.cmake
docs/: LICENCE_8MD.html  README_8MD.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen-awesome-custom.css  doxygen.css  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  index.js  licence.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_LICENCE.html  navtree.css  navtreedata.js  navtreeindex0.js  pages.html  sitemap.xml
docs/html/: README_8MD.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  files_dup.js  globals.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
docs/html/search/: search.css
docs/search/: all_0.js  all_2.js  all_5.js  all_6.js  all_9.js  files_0.js  files_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  pages_7.js  pages_9.js  searchdata.js
doxygen/: header.html
src/: main.cpp
